--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="//cdn.8thwall.com/web/xrextras/xrextras.js"></script>
 
   <!-- 8thWall Web - Replace the app key here with your own app key -->
-  <script async src="//apps.8thwall.com/xrweb?appKey=XXXXXXXXX"></script>
+  <script async src="//apps.8thwall.com/xrweb?appKey=pCDMg4cTCG5myX342gCxG0RjeRhFHmvKGOWxWvNDmRLVxEzFjbVS2ecOsru3mD8GJfUns3"></script>
 
 </head>
 
